# ITL.ControlPlane.SDK

./: .gitignore  ARCHITECTURE.md  AUTOMATED_VERSIONING.md  FINAL_STATUS.md  GRAPH_DATABASE_CONFIG.md  LICENSE  PROVIDER_ISOLATION.md  README.md  SEEDING_GUIDE.md  alembic.ini  pyproject.toml  simple_check.py  test_auto_init.py  test_graphdb_quick.py  test_sdk.py  verify_build.py
.github/: PYPI_SETUP.md
.github/workflows/: README.md  build-publish.yml  ci.yml  provider-testing.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_create_resource_tables.py  002_migrate_data_from_nodes.py  003_add_tenants_table.py  004_add_tenant_id_to_subscriptions_and_resource_groups.py  01aa02d8cf05_add_audit_mixin_and_events.py  06bb13e9de10_add_realms_table.py
docs/: 00-DOCUMENTATION_STRUCTURE_PLAN.md  00-IMPLEMENTATION_CHECKLIST.md  00-VISUAL_RESTRUCTURING_GUIDE.md  02-ARCHITECTURE.md  03-CORE_CONCEPTS.md  04-ARCHITECTURE.md  04-RESOURCE_GROUPS.md  05-FASTAPI_MODULE.md  06-FASTAPI_INTEGRATION.md  06-HANDLER_MIXINS.md  07-FASTAPI_QUICK_REFERENCE.md  07-LOCATION_VALIDATION.md  07-MIXIN_DESIGN_ROADMAP.md  08-API_ENDPOINTS.md  08-LIFECYCLE_HOOKS_INTEGRATION.md  09-ASYNC_PATTERNS.md  10-VERSIONING_UPDATE.md  11-RESOURCE_GROUP_CREATION_FLOW.md  11-WORKER_ROLES.md  12-RESOURCE_GROUP_BIG_3_INTEGRATION.md  14-CI_CD_PIPELINES.md  14-QUICK_REFERENCE.md  15-QUICK_REFERENCE_BIG_3.md  16-LOCATIONS_HANDLER.md  18-ITL_LOCATIONS_SCHEMA.md  19-DYNAMIC_LOCATIONS_SUMMARY.md  20-DYNAMIC_LOCATIONS_COMPLETE.md  20-WORKER_ROLE_INDEX.md  21-BIG_3_SUMMARY.md  21-WORKER_ROLE_ARCHITECTURE.md  22-BIG_3_COMPLETE_SUMMARY.md  22-WORKER_ROLE_QUICK_START.md  23-WORKER_ROLE_API_REFERENCE.md  24-WORKER_RETRY_AND_DLQ.md  25-SERVICE_BUS_PROVIDER_MODE.md  26-GENERIC_SERVICEBUS_IMPLEMENTATION.md  MODULAR_ARCHITECTURE.md  README.md  quick-reference.md  quick-start.md
docs/00-GETTING-STARTED/: README.md
docs/10-GUIDES/: 10-ADVANCED_PATTERNS.md  11-COMMON_PATTERNS.md  12-TESTING_GUIDE.md  13-DEPLOYMENT.md  14-MONITORING.md  15-TROUBLESHOOTING.md  17-REST_API_REFERENCE.md  18-CONCURRENCY_AND_ASYNC.md  19-DATA_MODELING_AND_SCHEMAS.md  20-MIGRATION_AND_UPGRADES.md  INDEX.md
docs/99-Archive/: 01-SCOPED_RESOURCE_HANDLER.md  02-RESOURCE_ID_STRATEGY.md  05-FASTAPI_MODULE.md  06-FASTAPI_INTEGRATION.md  08-PIPELINE_SETUP.md  13-SCOPED_RESOURCES_OVERVIEW.md  17-BIG_3_IMPLEMENTATION.md  18-ITL_LOCATIONS_SCHEMA.md  23-ARCHITECTURE_SUMMARY.md  26-GENERIC_SERVICEBUS_IMPLEMENTATION.md  CONSOLIDATION_MANIFEST.md  README.md
docs/LIFECYCLE_HOOKS/: 00-FULL_DOCUMENTATION_REFERENCE.md  INDEX.md  QUICK_REFERENCE.md  README.md
docs/architecture/: architecture.md  core-concepts.md
docs/archive/: 00-DOCUMENTATION_STRUCTURE_PLAN.md  00-IMPLEMENTATION_CHECKLIST.md  00-VISUAL_RESTRUCTURING_GUIDE.md  01-SCOPED_RESOURCE_HANDLER.md  02-RESOURCE_ID_STRATEGY.md  05-FASTAPI_MODULE.md  06-FASTAPI_INTEGRATION.md  07-FASTAPI_QUICK_REFERENCE.md  08-PIPELINE_SETUP.md  09-AUTOMATED_VERSIONING.md  10-VERSIONING_UPDATE.md  11-RESOURCE_GROUP_CREATION_FLOW.md  12-RESOURCE_GROUP_BIG_3_INTEGRATION.md  13-SCOPED_RESOURCES_OVERVIEW.md  15-QUICK_REFERENCE_BIG_3.md  16-LOCATIONS_HANDLER.md  17-BIG_3_IMPLEMENTATION.md  18-ITL_LOCATIONS_SCHEMA.md  19-DYNAMIC_LOCATIONS_SUMMARY.md  20-DYNAMIC_LOCATIONS_COMPLETE.md  20-WORKER_ROLE_INDEX.md  21-BIG_3_SUMMARY.md  21-WORKER_ROLE_ARCHITECTURE.md  22-BIG_3_COMPLETE_SUMMARY.md  22-WORKER_ROLE_QUICK_START.md  23-ARCHITECTURE_SUMMARY.md  23-WORKER_ROLE_API_REFERENCE.md  25-SERVICE_BUS_PROVIDER_MODE.md  26-GENERIC_SERVICEBUS_IMPLEMENTATION.md  27-PROVIDER_PATCH.md  28-DEFAULT_HOOKS_QUICK_REFERENCE.md  29-DEFAULT_HOOKS_COMPREHENSIVE_SUMMARY.md  30-DEFAULT_HOOKS_IMPLEMENTATION_INDEX.md  CONSOLIDATION_MANIFEST.md  README.md  SEED_FIXES_VERIFICATION.md
docs/ci-cd/: ci-cd-pipelines.md
docs/features/: api-endpoints.md  async-patterns.md  handler-mixins.md  location-validation.md  resource-groups.md  worker-roles.md
docs/getting-started/: README.md
docs/guides/: INDEX.md  README.md  advanced-patterns.md  common-patterns.md  concurrency-and-async.md  data-modeling-and-schemas.md  deployment.md  error-handling.md  full-documentation-reference.md  migration-and-upgrades.md  monitoring.md  quick-reference.md  rest-api-reference.md  tenant-realm-id-integration.md  testing-guide.md  troubleshooting.md
docs/roadmap/: iam-implementation.md  mixin-design-roadmap.md  pulumi-integration.md  resource-id-scopes.md
examples/: ORGANIZATION_COMPLETE.md  README.md  quickstart.py  scoped_resource_examples.py  test_itl_locations.py
examples/01-development-env/: Pulumi.yaml  __main__.py
examples/02-production-app/: Pulumi.yaml  __main__.py
examples/03-enterprise-multitenant/: Pulumi.yaml  __main__.py
examples/04-blue-green-aks/: Pulumi.yaml  __main__.py
examples/05-multi-region-dr/: Pulumi.yaml  __main__.py
examples/06-automation-api/: Pulumi.yaml  provision_tenant.py
examples/arm-convert/: template.json
examples/compute/: README.md
examples/compute/advanced/: README.md  scoped_resource_examples.py
examples/compute/beginner/: README.md
examples/core/: README.md
examples/core/advanced/: README.md
examples/deployment/: README.md
examples/deployment/advanced/: README.md
examples/deployment/beginner/: README.md
examples/fastapi/beginner/: app_factory_example.py
examples/identity/beginner/: organization_example.py  tenant_example.py
examples/management/: README.md
examples/network/: README.md
examples/storage/: README.md
examples/tests/: README.md
providers/: __init__.py  docker-compose.yml
providers/compute/: __init__.py  vm_provider.py
providers/keycloak/: __init__.py  provider.py
scripts/: version.ps1  version.py  version.sh
src/itl_controlplane_sdk/: __init__.py  models.py  registry.py  resource_provider.py  servicebus.py
src/itl_controlplane_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_models.py  test_resource_handlers.py  test_resource_provider.py  test_sdk_foundation.md  test_sdk_foundation_contracts.py  test_seed_resource_groups.py
(+224 files in other folders)
