[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itl-controlplane-sdk"
version = "1.0.0"
description = "ITL ControlPlane SDK - Core framework for resource management"
authors = [
    {name = "ITL Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
# --- Module extras (install only what you need) ---
identity = [
    # email-validator is needed by Pydantic's EmailStr used in TenantSpec
    "email-validator>=2.0.0",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.27.0"
]
pulumi = [
    "pulumi>=3.0.0",
    "pulumi-kubernetes>=4.0.0"
]
graphdb = [
    # In-memory graph database — no extra dependencies
]
graphdb-neo4j = [
    "itl-controlplane-sdk[graphdb]",
    "neo4j>=5.0.0"
]
graphdb-postgres = [
    "itl-controlplane-sdk[graphdb]",
    "psycopg2-binary>=2.9.0"
]
storage = [
    "itl-controlplane-sdk[graphdb]"
]
storage-postgres = [
    "itl-controlplane-sdk[storage,graphdb-postgres]"
]
storage-sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
storage-sqlalchemy-neo4j = [
    "itl-controlplane-sdk[storage-sqlalchemy]",
    "neo4j>=5.0.0",
]
messaging = [
    # In-memory broker — no extra dependencies
]
messaging-rabbitmq = [
    "itl-controlplane-sdk[messaging]",
    "aio-pika>=9.0.0"
]
# Convenience: install everything
all = [
    "itl-controlplane-sdk[identity,fastapi,pulumi,graphdb,storage,storage-sqlalchemy,messaging]"
]
# --- Development extras ---
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.isort]
known-first-party = ["itl_controlplane_sdk"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=itl_controlplane_sdk --cov-report=term-missing"
testpaths = [
    "tests",
    "test_sdk.py"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]